Second Webpage Push
Removed excess files, cleaned up appearance of all html pages, removed student-specific buttons, added buttons for weekly and daily view (not fully functional), updated customer model to allow Arduino data storage.

--- a/Final Project Public Webpage/public/stylesheets/site.css
+++ b/Final Project Public Webpage/public/stylesheets/site.css
@@ -3,6 +3,15 @@ body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+a {
+    float: left;
+    margin-right: 15px;
+    font-size: 20pt;
+    color: lightblue;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 .bg-az-blue {
     background-color: rgb(13, 36, 75);
 }
